sites/indigo/clusters/dal-indigo-core-1/wave-9/overlays/whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: whoami
    app.kubernetes.io/name: whoami
  name: whoami
  namespace: whoami
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: whoami
      app.kubernetes.io/name: whoami
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: whoami
        app.kubernetes.io/name: whoami
    spec:
      containers:
        - image: traefik/whoami:latest
          imagePullPolicy: IfNotPresent
          name: whoami
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
