sites/indigo/clusters/dal-indigo-core-1/wave-9/overlays/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: whoami
    app.kubernetes.io/name: whoami
  name: whoami
  namespace: whoami
spec:
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: whoami
    app.kubernetes.io/name: whoami
  type: ClusterIP
